fixed header z-index

--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ header {
     align-items: center;
     position: sticky;
     top: 0;
-    z-index: 10;
+    z-index: 9;
 }
 
 nav ul {
